# Backend-template

./: Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
core/: settings.py  urls.py
orders/: models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py
products/: views.py
products/tests/: test_products.py
